<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.arteaga.kevin.p3.MainActivity"
    android:orientation="vertical">



    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:id="@+id/rFiguras">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:text="@string/pregunta"
            android:textSize="19sp"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:id="@+id/rCuadro"
            android:text="@string/cuadro"
            android:textSize="20sp"
            android:onClick="onClick" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:id="@+id/rTriangulo"
            android:text="@string/triangulo"
            android:textSize="20sp"
            android:onClick="onClick" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:id="@+id/rRectangulo"
            android:text="@string/rectangulo"
            android:textSize="20sp"
            android:onClick="onClick" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:id="@+id/rCirculo"
            android:text="@string/circulo"
            android:textSize="20sp"
            android:onClick="onClick" />
    </RadioGroup>


</LinearLayout>
